[package]
name = "alby_api_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.13", default-features = false, features = ["rustls-tls"] }
serde = "1.0.152"
serde_derive = "1.0.152"
serde_json = "1.0.91"
thiserror = "1.0.38"
